tests/failures/handle_name_string_literal.stderr
error: expected identifier
  --> tests/failures/handle_name_string_literal.rs:18:19
   |
18 |     handle_name = "HandleThing",
   |                   ^^^^^^^^^^^^^
